# platform-cv

./: .env  .gitignore  Cargo.toml  README.md  ci.yml  diesel.toml  docker-compose.override.yml
.github/workflows/: ci.yml
assets/styles/: styles.css
migrations/2024-07-19-104505_first_migration/: down.sql  up.sql
migrations/2024-07-26-141546_candidate_entreprise/: down.sql  up.sql
migrations/2024-07-26-141546_company_entreprise/: down.sql  up.sql
migrations/2024-07-29-164725_user_entreprise_relation/: down.sql  up.sql
migrations/2024-07-29-165549_job/: down.sql  up.sql
migrations/2024-07-31-070410_insert_user_superadmin/: up.sql
src/: constants.rs  main.rs  schema.rs
src/config/: app.rs  db.rs
src/controller/: front_controller.rs  mod.rs
src/controller/back_office/: back_office_controller.rs  mod.rs
src/middleware/: auth_middleware.rs  jwt_auth.rs  mod.rs
src/models/: candidate.rs  company.rs  entreprise.rs  job_offer.rs  login_history.rs  mod.rs  user.rs  user_token.rs
src/templates/: back_office_template.rs  front_template.rs  mod.rs
src/tests/: mod.rs  test_app.rs  test_user.rs
src/utils/: token_utils.rs
templates/backoffice/: add_user.html  index.html  login.html
templates/homepage/: index.html
