[package]
name = "platform-cv"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"

actix-cors = "0.7.0"
actix-rt = "2.10.0"
actix-web = "4.8.0"
actix-files = "0.6.6"
actix-http = "3.8.0"
actix-multipart="0.7.2"
actix-web-actors = "4.3.0"

env_logger = "0.11.3"

futures = "0.3.30"

diesel = { version = "2.2.1", features = ["postgres", "uuid", "r2d2", "chrono"] }
diesel_migrations = "2.1.0"

dotenvy = "0.15.7"
dotenv = "0.15.0"

uuid = {version="1.10.0", features = ["serde", "v4"]}
log = "0.4.18"
config = "0.14.0"

chrono = { version = "0.4.38", features = ["serde"] }
http = "1.1.0"
serde = { version = "1.0.204", features = ["derive"] }

[dev-dependencies]
testcontainers = "0.14.0"
